# Programming-C

./: README.md  lab1_1.c  lab1_3.c  lab1_4.c  lab2_1.c  lab2_3.c  lab5_2.c  lab6_1.c  lab6_2.c  lab7_1.c  report.docx  sort.c
RGZ/: Chest.c  functions.c  functions.h  main.c
lab10/: Makefile  functions.c  functions.h  main.c
lab11/: task1.c  task2.c  task3.c  task4.c
lab8/: det.h  lab8_1.c
lab9/: lab9.c
optional_tasks/: recursion.c  snail.c
sem1/laba1/: lab1_2.c
sem1/laba2/: lab2_2.c
sem1/laba3/: lab3_1.c
sem1/laba4/: lab4_1.c
sem1/laba5/: lab5_1.c  lab5_2.c
sem1/laba6/: lab6_1.c  lab6_2.c
sem1/laba7/: lab7_1.c
sem2/laba1_Sortings/: main.c
sem2/laba2_Lists/: main.c
sem2/laba3_Git/: report.docx
sem2/laba4_TextFiles/: main.c
sem2/laba5_BinaryFiles/: main.c
sem2/laba6_Libraries/: CMakeLists.txt  functions.c  functions.h  main.c
sem2/laba7_Threads/: laba7.md  task1.c  task2.c  task3  task4.c  task5.c  task6.c
sem2/laba8_Testing/: codeForTesting.c  testing.c
